# GamesEngineering

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  copyme.py  output.txt  rsa_key.pub  ssh_key  ssh_key.pub
2_invaders/: InvaderManager.cpp  InvaderManager.h  Invaders.py  bullet.cpp  bullet.h  game.cpp  game.h  main.cpp  ship.cpp  ship.h
CMake/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
Scripts/: build_and_run.sh
practical_1/: main.cpp
practical_3/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
